# py-update-alternatives

./: .gitignore  README.md  pyproject.toml
tests/: Dockerfile  alternative_updater_test.py  basic_test.py  cli_test.py  conftest.py  options_test.py
tests/sample-alternatives-files/: python
tests/sample-run-command-files/: complete.toml  defaults-homebrew-recommended.toml  defaults-man-page.toml  defaults-ubuntu.toml  man-page-defaults.toml  partial.toml  partial2.toml
update_alternatives/: __init__.py  __main__.py
